crates/smart-config/tests/ui/derives/bogus_param_name.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/derives/bogus_param_name.rs:4:8
  |
4 |   struct TestConfig {
  |  ________^
5 | |     #[config(rename = "what?")]
6 | |     field: u64,
  | |_________^ the evaluated program panicked at 'Param name `what?` is invalid: name contains a disallowed char '?' at position 4; allowed chars are [_a-z0-9]', $DIR/tests/ui/derives/bogus_param_name.rs:4:8
